# c_learing

./: .gitignore  README.md  main.c
get_started/dev/: compile.sh
get_started/dev/00_src/: main.c  main.cpp
get_started/dev/10_bin/: config.json  main_NextGenLightweightFirmware
get_started/dev/60_docker/: Dockerfile-BeckhoffAdapter  docker-compose.yml
projects/tcpip_client/10_bin/: maintest  tcpip_client
projects/tcpip_client/Testing/: TAG
projects/tcpip_client/Testing/20241020-0945/: Test.xml
projects/tcpip_client/dev/: CMakeLists.txt
projects/tcpip_client/dev/00_src/: TcpClient.cpp  TcpClient.hpp  TcpConnection.hpp  VseCom.cpp  VseCom.hpp  main.cpp  tcp_msg.h  tcpip_client.cpp  tcpip_client.h
projects/tcpip_client/dev/10_bin/: calculator_test  maintest  tcpip_client  tcpip_client_test
projects/tcpip_client/dev/10_bin/Testing/20241020-0946/: Test.xml
projects/tcpip_client/dev/20_tests/: calculator_test.cpp  maintest.cpp  tcpip_client_test.cpp
projects/tcpip_client/dev/40_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
projects/tcpip_client/dev/40_build/.cmake/api/v1/reply/: cache-v2-0045ea490fb5317bb31c.json  cache-v2-b805dcdc8dd32526149c.json  cmakeFiles-v1-24ddd61d8446127f0c0f.json  cmakeFiles-v1-4759d5165dc1691ef3ff.json  codemodel-v2-830ad4479d3209c157d3.json  codemodel-v2-8468b31a5cbb22ee135f.json  codemodel-v2-9994727ccecdcf2555e3.json  codemodel-v2-da2be72a5c63f72e82d9.json  index-2024-10-20T09-27-52-0447.json  index-2024-10-20T10-00-22-0168.json  index-2024-10-20T16-42-45-0275.json  index-2024-10-22T18-51-55-0469.json  target-calculator_test-Debug-fa8e6c78632d370427cf.json  target-tcpip_client-Debug-108099ad58dcc9c5a783.json  target-tcpip_client-Debug-22f663e771ca8fd5bce5.json  target-tcpip_client-Debug-2c49e375661059b5c0f1.json  target-tcpip_client-Debug-4cd40f7635cd415c6cfc.json  target-tcpip_client_test-Debug-34083e4dd6b3db8c8392.json  target-tcpip_client_test-Debug-9acf7df83cc55f3eb6f3.json  target-tcpip_client_test-Debug-d5523777bdeed92dbc85.json
projects/tcpip_client/dev/40_build/Testing/: TAG
projects/tcpip_client/dev/40_build/Testing/20241020-0921/: Test.xml
projects/tcpip_client/dev/40_build/Testing/Temporary/: CTestCostData.txt
projects/tcpip_client/dev/Testing/: TAG
projects/tcpip_client/dev/Testing/20241020-0946/: Test.xml
projects/tcpip_server/dev/: CMakeLists.txt
projects/tcpip_server/dev/00_src/: main.cpp  tcp_msg.h  tcpip_server.cpp  tcpip_server.h
projects/tcpip_server/dev/10_bin/: tcpip_server  tcpip_server_test
projects/tcpip_server/dev/20_tests/: tcpip_server_test.cpp
projects/tcpip_server/dev/40_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
projects/tcpip_server/dev/40_build/.cmake/api/v1/reply/: cache-v2-6b87ba124edda927bff9.json  cache-v2-ae336312fd261f493340.json  cmakeFiles-v1-da4b2ebc5d9ca56bc556.json  cmakeFiles-v1-e974b37d60d19749eeeb.json  codemodel-v2-048d8986ef125719fcc0.json  codemodel-v2-3b438f2d740aebd4d349.json  codemodel-v2-490bd8553ae8213c3e96.json  index-2024-10-20T10-11-01-0854.json  index-2024-10-20T11-07-49-0612.json  index-2024-10-20T15-30-14-0497.json  index-2024-10-22T15-52-30-0306.json  target-tcpip_server-Debug-00cef256893c7a10f5e8.json  target-tcpip_server-Debug-028f6dee7f500cc384bc.json  target-tcpip_server-Debug-0884a8f80f9c12d3d756.json  target-tcpip_server_test-Debug-c5492ae3ae4ccbd0cd79.json  target-tcpip_server_test-Debug-d72c88b62bf24074eb80.json  target-tcpip_server_test-Debug-de9cb187f59170b04538.json
projects/tcpip_server/dev/40_build/Testing/: TAG
projects/tcpip_server/dev/40_build/Testing/20241020-1011/: Test.xml
template_cpp/dev/: compile.sh
template_cpp/dev/00_src/: main.cpp
template_cpp/dev/10_bin/: main_NextGenLightweightFirmware
template_cpp/dev/60_docker/: docker_run.sh
template_cpp/doc_internal/: architecture.drawio
